# silkroad

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
src/: error.rs  log.rs  logger.rs  main.rs  registry.rs  stream.rs  util.rs
src/command/: create.rs  execute.rs  mirror.rs  mod.rs  new.rs  pack.rs  package.rs  serve.rs  update.rs
