[package]
name = "silkroad"
version = "0.0.0"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"
description = "Yet another crates.io mirroring tool."
license = "MIT"

[dependencies]
actix-web =  { version = "1.0.2", features = ["rust-tls"] }
actix-files = "0.1.2"
actix-rt = "0.2"
rustls = "0.15"
mime = "0.3.13"

structopt = "0.2"

git2 = "0.9.1"
failure = "0.1.5"

toml = "0.5"
serde = "1.0.92"
serde_json = "1.0.39"
serde_derive = "1.0.92"

log = { version = "0.4.6", features = ["max_level_trace", "release_max_level_debug"] }
slog = { version = "2.4.1", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = { version = "2.3.0", default-features = false }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "91904ade" }
slog-term = "2.4.0"
slog_derive = "0.1"

chrono = "0.4.6"

[[bin]]
path = "src/main.rs"
name = "skrd"