[package]
name = "silkroad"
version = "0.0.2"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"
description = "A full-featured registry server for Cargo."
repository = "https://github.com/gengteng/silkroad"
license = "MIT"

[dependencies]
actix-web =  { version = "1.0.2", features = ["rust-tls"] }
actix-files = "0.1.2"
actix-rt = "0.2"
actix-http = "0.2.4"
futures = "0.1.27"
rustls = "0.15"
mime = "0.3.13"
walkdir = "2.2.8"

reqwest = "0.9.18"

structopt = "0.2"

git2 = "0.9.1"
failure = "0.1.5"

toml = "0.5"
serde = "1.0.92"
serde_json = "1.0.39"
serde_derive = "1.0.92"

digest = "0.8.1"
sha2 = "0.8.0"
hex-serde = "0.1.0"
hex = "0.3.2"

log = { version = "0.3.9", features = ["max_level_trace", "release_max_level_debug"] }
slog = { version = "2.4.1", features = ["max_level_trace", "release_max_level_debug"] }
slog-scope = "4.1.1"
slog-async = { version = "2.3.0", default-features = false }
slog-stdlog = "3.0.2"
slog-term = "2.4.0"
slog_derive = "0.1"

chrono = "0.4.6"
time = "0.1.42"

[[bin]]
path = "src/main.rs"
name = "skrd"